# TNN-zh

./: .gitignore  AI_GUIDE_KNOWN_FUNCS.md  LICENSE.txt  README.md  mixed_derivative_solver.py  pyproject.toml  rayleigh_quotient_solver.py  test.md  tnn_old.py  tnn_reconstructed.py
benchmarks/: bench_backward.py  bench_diff.py  bench_forward.py  bench_ops.py
ex_5_1/dim5/: ex_5_1_dim5.py  integration.py  quadrature.py  tnn.py
examples/: __init__.py  black_scholes_option.py  heat_nd.py  laplace_nd.py  laplacian_eigenvalue.py  mixed_derivative_pde.py  poisson_nd.py  poisson_weak_form.py
tnn/: __init__.py  core.py  trainer.py
tnn_zh/: __init__.py  core.py  integration.py  trainer.py
